[package]
name = "harmonic"
version = "0.1.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3"
dashmap = "3.11"

[dependencies.warp]
version = "0.2"
default-features = false
features = ["websocket"]
