[package]
name = "resonance"
version = "0.1.0"
authors = ["FrictionlessPortals <8077147+FrictionlessPortals@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
serde_json = "1.0"
futures = "0.3"
uuid = "0.8"

[dependencies.harmonic]
path = "../harmonic"

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.warp]
version = "0.2"
default-features = false
features = ["websocket"]
